changed button width of time seclect to remove horizontal scroll, removed api call to get reservations because the resolver takes care of the because of the redirect

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,6 +22,15 @@
   color: rgb(156, 135, 107) !important;
 }
 
-input:focus ~ label.ee .change-color {
-  color: #00dd22;
+::ng-deep .mat-calendar-body-selected {
+  background-color: #9e6b29 !important;
+  color: #fff !important;
 }
+
+::ng-deep .mat-calendar-body-today:not(.mat-calendar-body-selected) {
+  border-color: rgba(87, 51, 10, 0.38);
+}
+
+::ng-deep mat-datepicker-toggle {
+  color: rgb(133, 86, 33) !important;
+ }
