--- a/src/app/components/user-edit-reservation-time-select-dialog/user-edit-reservation-time-select-dialog.component.css
+++ b/src/app/components/user-edit-reservation-time-select-dialog/user-edit-reservation-time-select-dialog.component.css
@@ -6,7 +6,8 @@ li {
 
 button {
   display: inline-block;
-  width: 100%;
+  width: 95%;
+  margin: auto;
 }
 
 ul {
@@ -28,4 +29,5 @@ p {
 
 .confirm-edit-color {
   background-color: rgb(192, 133, 38) !important;
+  color: rgb(44, 22, 21) !important;
 }
