--- a/src/app/components/user-make-reservation-time-select-dialog/user-make-reservation-time-select-dialog.component.css
+++ b/src/app/components/user-make-reservation-time-select-dialog/user-make-reservation-time-select-dialog.component.css
@@ -6,7 +6,8 @@ li {
 
 button {
   display: inline-block;
-  width: 100%;
+  width: 95%;
+  margin: auto;
 }
 
 .submit {
